现在我们点击返回不会回到上一个ac了

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:launchMode="singleTask"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
